--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,8 @@ Alpha 0.1.6
 -Added "Personal Folder" option in settings
 -Added "Always delete file after install" option to installer page
 -Lock FPS value is now persistent
+Alpha 0.1.7
+-Added partial functionality to Database manager
+-Added ability to create a custom database
+-Added ability to open mxs directory
+*Fixed bugs
