--- a/changelog.txt
+++ b/changelog.txt
@@ -13,3 +13,7 @@ Alpha 0.1.7
 -Added ability to create a custom database
 -Added ability to open mxs directory
 *Fixed bugs
+Alpha 0.1.7.1
+-Database is properly deleted after removal
+-Moved "open mxs directory" button to settings page
+-Code slightly polished
