--- a/changelog.txt
+++ b/changelog.txt
@@ -19,3 +19,9 @@ Alpha 0.1.7.1
 -Code slightly polished
 Alpha 0.2
 -Reworked custom database handling
+Alpha 0.2.1
+*Backup option does not work with large mods (multi-foldered/filed tracks)
+-Gear, Track and Bike databases now reside in "default_databases" folder
+-MXS Directory is now handled with program settings, not a text file
+-Changed exe icon to be grey
+-Several bug fixes
