--- a/Circuit Mod Manager/Properties/Resources.resx
+++ b/Circuit Mod Manager/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="folder_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\folder_open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mxsim_mod_manager_gray_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mxsim_mod_manager_gray_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
